--- a/howler/wally_search/templates/wally/search.html
+++ b/howler/wally_search/templates/wally/search.html
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class='col-md-1'>
+                    <div class='col-md-1 text-nowrap'>
                         {% comment %}Translators: Separator between sliding window and fix dates{% endcomment %}
                         <h3 class="text-primary">{% trans "OR" %}</h3>
                     </div>
