--- a/howler/wally_search/static/wally/style_wally.css
+++ b/howler/wally_search/static/wally/style_wally.css
@@ -1,11 +1,56 @@
-#header .content{
+#header .content {
     background: white url("img/wally100.png") no-repeat right bottom;
 }
 
-table.table-emails tbody>tr:last-child>td{
+table.table-emails tbody > tr:last-child > td {
     padding-bottom: 30px;
 }
 
 .js_hit {
     cursor: pointer;
 }
+
+/* Transparent Overlay */
+.loading {
+    /*display: block;*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.loading:before {
+    content: '\e031';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-animation: spin 700ms infinite linear;
+    animation: spin 700ms infinite linear;
+    font-size: 2em;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+
