--- a/howler/templates/base.html
+++ b/howler/templates/base.html
@@ -52,7 +52,8 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <!--<li><a href="{% url 'wally:search' %}">Search</a></li>-->
-                <li><a href="#">{% trans "Settings" %}</a></li>
+                <li><a href="{% url 'wally:synonyms' %}">{% trans "Settings" %}</a></li>
+                <li><a href="{% url 'admin:index' %}">{% trans "Admin" %}</a></li>
                 <!--<li><a href="#">Help</a></li>-->
             </ul>
 
